[package]
name = "tows"
description = "A tool for Node.js project to install the same dependencies of its project to each workspace package"
default-run = "tows"
version = "0.0.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]
authors = ["nju33 <nju33.ki@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["monorepo"]
license-file = "LICENSE"
readme = "README.md"
# documentation = ""

[[bin]]
name = "tows"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
termion = "1.5.5"

[package.metadata.release]
pre-release-commit-message = "build: release {{version}}"
post-release-commit-message = "build: release {{next_version}}"
